--- a/src/sass/components/_ProjectDetailsModal.scss
+++ b/src/sass/components/_ProjectDetailsModal.scss
@@ -428,4 +428,14 @@
   
    
   }
-  
+
+.project-images-horizontal {
+  opacity: 0;
+}
+
+.scroll-control-btn {
+  font-size: 3rem;
+  color: black;
+  cursor: pointer;
+  background-color: transparent;
+}
