--- a/src/sass/components/_projects.scss
+++ b/src/sass/components/_projects.scss
@@ -219,3 +219,15 @@
       padding-bottom: 10px;
     }
   }
+
+  .archii {
+    opacity: 1;
+  }
+
+  .exploo {
+    opacity: 1;
+  }
+
+  .button-container {
+    width: 100%;
+  }
