--- a/src/sass/components/_banner.scss
+++ b/src/sass/components/_banner.scss
@@ -111,7 +111,7 @@
       height: 40px;
       cursor: pointer;
       width: 80px;
-      border-bottom: 5px solid black;
+      border-bottom: 5px solid;
       position: absolute;
       display: flex;
       align-items: center;
