--- a/src/sass/components/_ProjectDetailsModal.scss
+++ b/src/sass/components/_ProjectDetailsModal.scss
@@ -177,7 +177,7 @@
   .scroll-top a {
     font-size: 24px;
     text-decoration: none;
-    color: black;
+    color: --text-color;
   }
   
   .dividder {
