--- a/src/sass/components/_contact.scss
+++ b/src/sass/components/_contact.scss
@@ -47,12 +47,12 @@ html, body {
 }
 .contact-column h1 {
   font-size: 10rem;
-  color: #333;
+  color: --text-color;
 }
 
 .contact-column p {
   font-size: 3rem;
-  color: #555;
+  color: --text-color;
   margin: 10px 0;
   
 }
@@ -91,7 +91,7 @@ html, body {
   width: 100%;
   align-items: center;
   font-family: sans-serif;
-  color: #555;
+  color: --text-color;
   font-weight: 499;
   font-size: 1.8rem;
   margin: 20px 10px;
@@ -108,7 +108,7 @@ html, body {
 }
 
 .contact-column2 a:hover {
-  color: #000;
+  color: grey;
   text-decoration: underline;
 }
 
