--- a/src/sass/components/_aboutinfo.scss
+++ b/src/sass/components/_aboutinfo.scss
@@ -599,7 +599,7 @@ body {
   .contact-link {
     font-family: "EB Garamond", serif;
     font-size: 3rem;
-    color: #333;
+    color: --text-color;
     font-weight: 399;
   }
 
