--- a/src/sass/abstracts/_variables.scss
+++ b/src/sass/abstracts/_variables.scss
@@ -32,7 +32,7 @@ $primary-color-dark: #1e90ff;  // Dark theme primary color
 
 /* Dark Theme */
 :root.dark-theme {
-    --background-color: #0A0A0A; /* Background for dark theme */
+    --background-color: #121212; /* Background for dark theme */
     --text-color: #ffffff;       /* Text color for dark theme */
     --secondary-color: #dddddd;  /* Secondary text color */
 }
