--- a/src/sass/components/_about.scss
+++ b/src/sass/components/_about.scss
@@ -13,6 +13,22 @@ body {
   overflow: hidden;
 }
 
+.about-section h1 {
+  font-size: 10rem;
+
+  @media (max-width:756px) {
+    font-size: 4rem;
+  }
+}
+
+.content h1 {
+  font-size: 10rem;
+
+  @media (max-width:756px) {
+    font-size: 4rem;
+  }
+}
+
 .containerr {
   position: relative;
   height: 100vh;
