--- a/src/sass/components/_contact.scss
+++ b/src/sass/components/_contact.scss
@@ -98,8 +98,8 @@ html, body {
   transition: color 0.3s;
   @media (max-width:756px) {
     margin: 10px 0;
-    font-family: "EB Garamond", serif;
-    font-weight: 399;
+    font-family: "Poiret One", serif;
+    font-weight: 200;
   }
 }
 
