--- a/src/sass/components/_loader.scss
+++ b/src/sass/components/_loader.scss
@@ -46,7 +46,8 @@
 
 .texts-container span {
   font-size: 24px;
-  font-family: 'EB Garamond', serif;
+  font-family: 'Poiret One', serif;
+  font-weight: 200;
 
   @media (max-width: 768px) {
     font-size: 18px;
