--- a/src/sass/components/_moreinfo.scss
+++ b/src/sass/components/_moreinfo.scss
@@ -213,8 +213,9 @@
 }
 
 .go-back-btn {
-    font-family: "EB Garamond", serif;
+    font-family: "Poiret One", serif;
     font-size: 2rem;
+    font-weight: 200;
 }
   
 .header-title {
@@ -232,8 +233,9 @@
 
 .project-info-panel h2 {
     font-size: 2.2rem;
+    font-weight: 200;
     padding-bottom: 5px;
-    font-family: 'EB Garamond', serif;
+    font-family: 'Poiret One', serif;
 }
 
 .project-info-panel p {
