--- a/src/sass/components/_aboutinfo.scss
+++ b/src/sass/components/_aboutinfo.scss
@@ -127,14 +127,15 @@ body {
 
 .info-column h3 {
   font-size: 3.5rem;
-  font-family: 'EB Garamond', serif;
+  font-family: 'Poiret One', serif;
+  font-weight: 200;
 }
 
 .info-column p {
   font-size: 2.4rem;
   color: black;
   font-weight: bolder;
-  font-family: 'EB Garamond', serif;
+  font-family: 'Poiret One', serif;
   font-style: italic;
   text-align: right;
 }
@@ -181,8 +182,9 @@ body {
   text-decoration: underline; /* Remove underline from link */
   color: #222; /* Link color */
   font-size: 2rem;
-  font-family: 'EB Garamond', serif;
+  font-family: 'Poiret One', serif;
   padding-left: 20px;
+  font-weight: 200;
 }
 
 .school a:hover {
@@ -629,9 +631,10 @@ body {
 
 @media (max-width: 756px) {
   .contact-link {
-    font-family: "EB Garamond", serif;
+    font-family: "Poiret One", serif;
     font-size: 3rem;
     color: --text-color;
+    font-weight: 200;
     font-weight: 399;
   }
 
