--- a/src/sass/components/_projects.scss
+++ b/src/sass/components/_projects.scss
@@ -56,8 +56,9 @@
   
   .header-row h1 {
     font-size: 10rem;
+    font-weight: 200;
     color: --text-color;
-    font-family: 'EB Garamond', serif;
+    font-family: 'Righteous', serif;
   }
   
   /* Two-column layout for the content */
@@ -88,8 +89,9 @@
     font-size: 1.8rem;
     line-height: 1.5;
     padding-right: 20px;
+    font-weight: 200;
     color: --text-color;
-    font-family: 'EB Garamond', serif;
+    font-family: 'Poiret One', serif;
   }
   
   .discovered {
@@ -102,7 +104,8 @@
     border-top: none;
     color: --text-color;
     cursor: pointer;
-    font-family: 'EB Garamond', serif;
+    font-weight: 200;
+    font-family: 'Poiret One', serif;
     font-size: 2.5rem;
     transition: background-color 0.3s;
 
