--- a/src/sass/abstracts/_variables.scss
+++ b/src/sass/abstracts/_variables.scss
@@ -5,7 +5,7 @@ $layout-breakpoint-small: 960px;
 $layout-breakpoint-xsmall: 480px;
 
 // src/sass/variables.scss
-$font-poiret-one: 'Poiret One', sans-serif;
+$font-poiret-one: "'Poiret One'", sans-serif;
 // Common Colors
 $white: #ffffff;
 $black: #000000;
