--- a/src/sass/components/_banner.scss
+++ b/src/sass/components/_banner.scss
@@ -91,7 +91,7 @@
         font-weight: 500;
         font-size: 1.8rem;
         line-height: 2.6rem;
-        font-family: 'Poiret One', serif;
+        font-family: "'Poiret One'", serif !important;
         width: 320px;
 
         @media (max-width: 768px) {
