--- a/src/sass/components/_moreinfo.scss
+++ b/src/sass/components/_moreinfo.scss
@@ -213,7 +213,7 @@
 }
 
 .go-back-btn {
-    font-family: "Poiret One", serif;
+    font-family: "'Poiret One'", serif !important;
     font-size: 2rem;
     font-weight: 200;
 }
@@ -235,7 +235,7 @@
     font-size: 2.2rem;
     font-weight: 200;
     padding-bottom: 5px;
-    font-family: 'Poiret One', serif;
+    font-family: "'Poiret One'", serif !important;
 }
 
 .project-info-panel p {
