--- a/src/sass/base/_global.scss
+++ b/src/sass/base/_global.scss
@@ -31,8 +31,7 @@ body.loading #fullpage-wrapper {
   }
   
   
-  @import url('https://fonts.googleapis.com/css2?family=Righteous&display=swap');
-  @import url("https://fonts.googleapis.com/css?family=Poppins:300,400,600,800&display=swap");
+  @import url('https://fonts.googleapis.com/css2?family=all-round-gothic&display=swap');
   
   $red: rgb(237, 237, 237);
   $black: grey;
@@ -41,8 +40,9 @@ body.loading #fullpage-wrapper {
   body {
     padding: 0;
     margin: 0;
-    font-family: "Poppins", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
-      Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+    font-family: "'Poiret One'", sans-serif;
+    font-weight: 200;
+    
   }
   
   .container {
@@ -311,7 +311,9 @@ body.loading #fullpage-wrapper {
   
   .menu .button3{
     content: "";
-    font-family: 'Poiret One', serif;
+    font-family: "'Poiret One'", sans-serif;
+    font-weight: 200;
+    
     margin-left: 20px;
     padding: 10px 10px;
     font-weight: 200;
@@ -338,7 +340,7 @@ body.loading #fullpage-wrapper {
   
     .menu .button3{
       content: "";
-      font-family: 'Poiret One', serif;
+      font-family: "'Poiret One'", sans-serif;
       margin-left: 20px;
       display: flex;
       font-weight: 200;
@@ -405,7 +407,7 @@ body.loading #fullpage-wrapper {
     width: 100%;
   }/* Contact link style */
   .contactt a {
-    font-family: 'Poiret One', serif;
+    font-family: "'Poiret One'", serif !important;
     padding: 5px 0px;
     font-weight: 200;
     border-bottom: none; /* Remove the default border-bottom */
