--- a/src/sass/base/_typography.scss
+++ b/src/sass/base/_typography.scss
@@ -4,7 +4,7 @@ html {
   font-size: 62.5%;
   line-height: 1.25;
   body {
-    font-family: "Righteous", -apple-system, BlinkMacSystemFont, "Segoe UI",
+    font-family: "all-round-gothic", -apple-system, BlinkMacSystemFont, "Segoe UI",
       Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue",
       sans-serif;
   }
