--- a/src/sass/components/_ProjectDetailsModal.scss
+++ b/src/sass/components/_ProjectDetailsModal.scss
@@ -214,7 +214,7 @@
   }
 
   .project-title h1 {
-    font-family: 'Righteous', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-family: 'all-round-gothic', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-size: 9rem;
     padding: 20px 80px;
   }
