--- a/src/sass/components/_loader.scss
+++ b/src/sass/components/_loader.scss
@@ -46,7 +46,7 @@
 
 .texts-container span {
   font-size: 24px;
-  font-family: 'Poiret One', serif;
+  font-family: "'Poiret One'", serif !important;
   font-weight: 200;
 
   @media (max-width: 768px) {
