--- a/src/sass/components/_projects.scss
+++ b/src/sass/components/_projects.scss
@@ -58,7 +58,7 @@
     font-size: 10rem;
     font-weight: 200;
     color: --text-color;
-    font-family: 'Righteous', serif;
+    font-family: 'all-round-gothic', serif;
   }
   
   /* Two-column layout for the content */
@@ -91,7 +91,7 @@
     padding-right: 20px;
     font-weight: 200;
     color: --text-color;
-    font-family: 'Poiret One', serif;
+    font-family: "'Poiret One'", serif !important;
   }
   
   .discovered {
@@ -105,7 +105,7 @@
     color: --text-color;
     cursor: pointer;
     font-weight: 200;
-    font-family: 'Poiret One', serif;
+    font-family: "'Poiret One'", serif !important;
     font-size: 2.5rem;
     transition: background-color 0.3s;
 
