--- a/src/sass/components/_banner.scss
+++ b/src/sass/components/_banner.scss
@@ -47,7 +47,7 @@
     .row-title,
     .row-letter {
       font-size: 13rem;
-      font-weight: 500;
+      font-weight: bolder;
       position: relative;
       letter-spacing: 0rem;
       display: flex;
