--- a/src/sass/components/_marquee.scss
+++ b/src/sass/components/_marquee.scss
@@ -12,6 +12,7 @@ $move-final: calc(-50%);
     display: flex;
     position: relative;
     height: 180px;
+    font-weight: bolder;
     animation-play-state: paused;
     @media (min-width: $layout-breakpoint-large) {
       transform: translate3d(calc(-25% + 10vw), 0, 0);
